--- a/DynamicFilterDemo/Views/Shared/_Layout.cshtml
+++ b/DynamicFilterDemo/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="~/css/dataTables/dataTables.bootstrap5.min.css" />
 
+    <link rel="stylesheet" href="~/notiflix/minified/notiflix-1.9.1.min.css" />
+
     <link rel="stylesheet" href="~/font-awesome/css/font-awesome.min.css" />
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -66,6 +68,8 @@
     <script src="~/js/dataTables/dataTables.bootstrap5.min.js"></script>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/notiflix/minified/notiflix-1.9.1.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 
