--- a/DynamicFilterDemo/Views/Shared/_Layout.cshtml
+++ b/DynamicFilterDemo/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="~/font-awesome/css/font-awesome.min.css" />
 
+    <link href="~/select2/css/select2.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
 
@@ -34,10 +36,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Aanasayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Kullanıcılar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Kategoriler</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Ürünler</a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +79,11 @@
 
     <script src="~/notiflix/minified/notiflix-1.9.1.min.js"></script>
 
+    <script src="~/select2/js/select2.min.js"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/js/app.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
